--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,13 @@
             <artifactId>fluent-hc</artifactId>
             <version>4.5.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <!--<version>4.0.3</version>-->
+        </dependency>
+
     </dependencies>
 
     <build>
