--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,9 +1,12 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/tech4u?serverTimezone=UTC
+url=jdbc:mysql://localhost:3306/shopping?serverTimezone=UTC
 username=root
 password=242492
+#url=jdbc:mysql://192.168.70.167:3307/iot-saas?allowMultiQueries=true&characterEncoding=UTF-8
+#username=root
+#password=123456
 #定义初始连接数
-initialSize=0
+initialSize=20
 #定义最大连接数
 maxActive=20
 #定义最大空闲
